force-app/main/default/objects/salary__c/salary__c.object-meta.xml
<CustomObject>
    <label>salary</label>
    <nameField>
        <label>company name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>salarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>