force-app/main/default/objects/salary__c/fields/basic_salary__c.field-meta.xml
<CustomField>
    <fullName>basic_salary__c</fullName>
    <label>basic salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>