force-app/main/default/objects/salary__c/fields/gross_salary__c.field-meta.xml
<CustomField>
    <fullName>gross_salary__c</fullName>
    <formula>basic_salary__c + DA__c + HRA__c + medical_allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>gross salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>