force-app/main/default/objects/salary__c/fields/health_insurance__c.field-meta.xml
<CustomField>
    <fullName>health_insurance__c</fullName>
    <formula>basic_salary__c *0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>health insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>