force-app/main/default/objects/salary__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <formula>basic_salary__c *0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>