force-app/main/default/objects/salary__c/fields/income_tax__c.field-meta.xml
<CustomField>
    <fullName>income_tax__c</fullName>
    <formula>gross_salary__c *0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>income tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>