force-app/main/default/objects/salary__c/fields/medical_allowance__c.field-meta.xml
<CustomField>
    <fullName>medical_allowance__c</fullName>
    <formula>basic_salary__c *0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medical allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>