force-app/main/default/objects/salary__c/fields/net_salary__c.field-meta.xml
<CustomField>
    <fullName>net_salary__c</fullName>
    <formula>gross_salary__c - (income_tax__c + health_insurance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>net salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>